Node tools: Unable to reference object geometry #114102

Closed
opened 2023-10-24 13:09:18 +02:00 by Hans Goudey · 2 comments
Member

I haven't had the chance to look into this yet, but I would really like to make sure referencing objects' evaluated geometry works in 4.0, even for objects that aren't in the scene (aren't in the active depsgraph).

If we can't get this working, it would probably be best to disable object inputs to node tools.

I haven't had the chance to look into this yet, but I would really like to make sure referencing objects' evaluated geometry works in 4.0, even for objects that aren't in the scene (aren't in the active depsgraph). If we can't get this working, it would probably be best to disable object inputs to node tools.
Hans Goudey added this to the 4.0 milestone 2023-10-24 13:09:18 +02:00
Hans Goudey added the
Type
Bug
Module
Nodes & Physics
Status
Confirmed
Priority
High
labels 2023-10-24 13:09:18 +02:00
Hans Goudey added this to the Nodes & Physics project 2023-10-24 13:09:20 +02:00
Hans Goudey self-assigned this 2023-10-24 13:09:39 +02:00
Author
Member

Resolved part of the issue in ccfe952f34. Next step is to create a separate depsgraph and evaluate it if necessary.

Resolved part of the issue in ccfe952f3455d4328ade1bb24d948a167a183f28. Next step is to create a separate depsgraph and evaluate it if necessary.
Author
Member

The next issue is resolved by #114293. The final part of the fix will combine fixing #113383 and doing a similar change to IDs passed by node group inputs in the redo panel.

The next issue is resolved by #114293. The final part of the fix will combine fixing #113383 and doing a similar change to IDs passed by node group inputs in the redo panel.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-01 10:54:55 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114102
No description provided.