Fix #114102: Data-block references don't work with node tools